--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
     </div>
   </section>
 
-  <!-- Full-Width Banner -->
-  <section style="width:100%;overflow:hidden;">
-    <img src="AIRC_BANNER.png" alt="AI Brain Banner" style="width:100%;display:block;">
-  </section>
+<!-- Centered Logo Section -->
+<section style="padding:60px 20px; background:white; text-align:center;">
+  <img src="airc2.png" alt="AIRC Logo Centered" style="max-width:300px; width:100%; height:auto; display:inline-block;">
+</section>
 
   <!-- About Section -->
   <section id="about" style="padding:50px 20px;background-color:#eef3f8;">
