--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Artificial Intelligence Research Corp</title>
+  <title>Artificial Intelligence Research Corps</title>
 </head>
 <body style="margin:0; font-family:Arial,sans-serif; background-color:#f8f9fb; color:#222;">
 
