--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <img src="AIRC_LOGO.png" alt="AIRC Logo" style="height:50px;margin-right:15px;">
       <div style="line-height:1.2;">
         <span style="font-size:18px;font-weight:bold;">ARTIFICIAL INTELLIGENCE</span><br>
-        <span style="font-size:16px;color:#555;">RESEARCH CORP</span>
+        <span style="font-size:16px;color:#555;">RESEARCH CORPS</span>
       </div>
     </div>
     <nav style="display:flex;gap:20px;align-items:center;">
