--- a/MentorProgram/index.html
+++ b/MentorProgram/index.html
@@ -141,10 +141,7 @@
     <header>
       <div class="kicker">AI Research Corp (AIRC) • Mentor Program</div>
       <h1>Pilot Kickoff Hub (Jan–Jun 2026)</h1>
-      <p class="sub">
-        This page replaces the “kickoff meeting.” It’s a lightweight, practical guide to help you run
-        <strong>two high-quality sessions</strong> during the pilot — using templates as <em>guidance</em>, not hard rules.
-      </p>
+     
       <div class="pillrow">
         <div class="pill"><strong>Pilot goal:</strong> 2 sessions / volunteer</div>
         <div class="pill"><strong>Format:</strong> recorded interviews + mentor sessions</div>
@@ -316,31 +313,17 @@
             A session doesn’t need to be perfect. It needs to be <strong>useful</strong>, <strong>coherent</strong>, and <strong>repeatable</strong>.
           </p>
         </div>
-        <div>
-          <h3 style="margin:0 0 8px; font-size:16px">Boundaries (Keeps it Simple)</h3>
-          <ul class="muted" style="margin:0; padding-left:18px">
-            <li>No heavy paperwork.</li>
-            <li>No micromanaging.</li>
-            <li>No perfectionism required.</li>
-            <li>We prioritize volunteers who deliver sessions.</li>
-          </ul>
-          <p class="muted" style="margin:10px 0 0">
-            If you can do <strong>two solid sessions</strong> during the pilot, you’re doing the job.
-          </p>
-        </div>
+        
       </div>
     </section>
 
     <section class="card" style="margin-top:14px">
       <h2>4) Session Plan / Handoff (Send to AIRC)</h2>
       <p class="muted" style="margin:0 0 10px">
-        Use this section to send the basics back to Mohamad. This is intentionally minimal.
+        Use this section to send the basics back to Mohamad. 
       </p>
 
-      <div class="callout">
-        <strong>Private by default:</strong> This “Submit” action uses your email app (mailto). No web server needed.
-        If you want a true web submission later, we can swap this for a secure form endpoint.
-      </div>
+
 
       <form id="handoffForm">
         <div class="twoCol">
@@ -387,20 +370,6 @@
       </form>
     </section>
 
-    <section class="card" style="margin-top:14px">
-      <h2>5) Next Step (Optional): Convert Paperwork → Simple HTML</h2>
-      <p class="muted" style="margin:0">
-        Yes — you can replace Drive-based paperwork with a private, lightweight browser flow:
-        <strong>(a)</strong> a static “Volunteer Acknowledgement” page, plus
-        <strong>(b)</strong> a single submission form (either mailto, or a secure endpoint).
-        This keeps everything clean and consistent, and avoids scattering forms.
-      </p>
-      <div class="hr"></div>
-      <p class="muted" style="margin:0">
-        If you want, I can generate a second HTML page called <strong>volunteer-acknowledgement.html</strong>
-        that includes: code of conduct checkbox, recording consent checkbox, and a single “I agree” submission.
-      </p>
-    </section>
 
     <p class="foot">
       © AI Research Corp (AIRC). This hub is intended for the pilot cohort. Keep links minimal if you publish publicly.
