--- a/MentorProgram/index.html
+++ b/MentorProgram/index.html
@@ -140,7 +140,7 @@
 
     <header>
       <div class="kicker">AI Research Corp (AIRC) • Mentor Program</div>
-      <h1>Pilot Kickoff Hub (Jan–Jun 2026)</h1>
+      <h1>Pilot Speaker Series Hub (Jan–Jun 2026)</h1>
      
       <div class="pillrow">
         <div class="pill"><strong>Pilot goal:</strong> 2 sessions / volunteer</div>
