--- a/MentorProgram/index.html
+++ b/MentorProgram/index.html
@@ -329,7 +329,7 @@
         <div class="twoCol">
           <div>
             <label for="volName">Your name</label>
-            <input id="volName" name="volName" placeholder="e.g., Shante Stokes" />
+            <input id="volName" name="volName" placeholder="e.g., Amani Halim" />
           </div>
           <div>
             <label for="topic">Session theme</label>
