--- a/MentorProgram/index.html
+++ b/MentorProgram/index.html
@@ -159,7 +159,7 @@
 
         <div class="btnrow">
           <a class="btn primary" href="#" id="kickoffLink">▶ Kickoff Recording (add link)</a>
-          <a class="btn" href="/MentorProgram/Submission/" id="quickGuideLink">📄 Forms (optional)</a>
+          <a class="btn" href="https://airesearchcorps.org/MentorProgram/Submission/" id="quickGuideLink">📄 Forms (optional)</a>
           <a class="btn" href="https://drive.google.com/drive/folders/18H6aBRzxRQAiATV7Udl3t8eriCF87NWI?usp=sharing" target="_blank" rel="noopener">
             📁 Procedures & Templates Folder
           </a>
