--- a/MentorProgram/Submission/form-01.html
+++ b/MentorProgram/Submission/form-01.html
@@ -1,75 +1,138 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>AIRC | Mentor Program Submission | Form 01</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Mentor Program Submission | Form 01</title>
+
+  <!-- Reuse your site CSS if you want consistent styling -->
   <link rel="stylesheet" href="/assets/css/style.css" />
+
+  <style>
+    /* Safe defaults if your main CSS doesn't include these */
+    body { margin: 0; }
+
+    .mp-wrap {
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 24px 16px 48px;
+    }
+
+    .mp-head {
+      display: flex;
+      align-items: center;
+      gap: 14px;
+      margin: 10px 0 18px;
+    }
+
+    .mp-head img {
+      width: 34px;
+      height: 34px;
+      object-fit: contain;
+    }
+
+    .mp-title {
+      margin: 0;
+      font-size: 28px;
+      line-height: 1.2;
+    }
+
+    .mp-subtitle {
+      margin: 6px 0 0;
+      opacity: 0.85;
+    }
+
+    .mp-card {
+      border-radius: 16px;
+      padding: 16px;
+      background: rgba(255,255,255,0.04);
+      border: 1px solid rgba(255,255,255,0.08);
+      backdrop-filter: blur(10px);
+    }
+
+    .mp-actions {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      margin: 10px 0 14px;
+    }
+
+    .mp-btn {
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      padding: 10px 14px;
+      border-radius: 12px;
+      border: 1px solid rgba(255,255,255,0.12);
+      background: rgba(255,255,255,0.06);
+      color: inherit;
+      text-decoration: none;
+    }
+    .mp-btn:hover { background: rgba(255,255,255,0.10); }
+
+    /* Responsive iframe container */
+    .mp-iframe-wrap {
+      width: 100%;
+      border-radius: 14px;
+      overflow: hidden;
+      border: 1px solid rgba(255,255,255,0.10);
+      background: rgba(0,0,0,0.20);
+    }
+    .mp-iframe {
+      width: 100%;
+      height: min(82vh, 980px);
+      border: 0;
+      display: block;
+      background: transparent;
+    }
+
+    .mp-note {
+      margin-top: 12px;
+      font-size: 14px;
+      opacity: 0.85;
+      line-height: 1.45;
+    }
+
+    code { opacity: 0.95; }
+  </style>
 </head>
 
 <body>
-  <header class="site-header">
-    <div class="logo-title">
-      <img src="/assets/img/AIRC_LOGO.png" alt="AIRC logo" class="logo">
+  <div class="mp-wrap">
+    <div class="mp-head">
+      <img src="/assets/img/AIRC_LOGO.png" alt="AIRC logo" />
       <div>
-        <h1>Mentor Program Submission</h1>
-        <p class="tagline">Form 01 · Optional web submission</p>
+        <h1 class="mp-title">Mentor Program Submission</h1>
+        <p class="mp-subtitle">Form 01 · Optional web submission</p>
       </div>
     </div>
-    <nav class="nav">
-      <a href="/MentorProgram/">Mentor Program</a>
-      <a href="/MentorProgram/Submission/">Submission Hub</a>
-      <a href="/">Home</a>
-    </nav>
-  </header>
 
-  <main>
-    <section class="section">
-      <h3 class="section-title">Form 01</h3>
-      <p class="section-intro">
-        Use this form if you prefer submitting via the web (instead of Word/PDF templates).
-        If the embedded form doesn’t load, use the “Open in new tab” link below.
-      </p>
+    <div class="mp-card">
+      <div class="mp-actions">
+        <a class="mp-btn" href="/MentorProgram/Submission/" aria-label="Back to submissions hub">← Back to Submission Hub</a>
 
-      <div class="single-card">
-        <article class="card">
-          <p style="margin: 0 0 12px 0;">
-            <a class="text-link" target="_blank" rel="noopener"
-               href="https://docs.google.com/forms/d/e/1FAIpQLSewMzKV9E5IXkiPUaWr7QbopqJVJpyLWF5qXVDGEyEAuOECig/viewform?usp=sharing&ouid=101360464531951242631">
-              Open Form 01 in a new tab →
-            </a>
-          </p>
-
-          <div style="border-radius:12px; overflow:hidden;">
-            <iframe
-              src="https://docs.google.com/forms/d/e/1FAIpQLSewMzKV9E5IXkiPUaWr7QbopqJVJpyLWF5qXVDGEyEAuOECig/viewform?usp=sharing&ouid=101360464531951242631"
-              width="100%"
-              height="1400"
-              frameborder="0"
-              marginheight="0"
-              marginwidth="0"
-              loading="lazy"
-              style="border:0;"
-              title="AIRC Mentor Program Submission Form 01"
-            >
-              Loading…
-            </iframe>
-          </div>
-
-          <p class="card-meta" style="margin-top:12px;">
-            Tip: If you’re on mobile and the form feels cramped, use “Open in a new tab”.
-          </p>
-        </article>
+        <!-- Fallback open in new tab -->
+        <a class="mp-btn" href="https://docs.google.com/forms/d/e/1FAIpQLSewMzKV9E5IXkiPUaWr7QbopqJVJpyLWF5qXVDGEyEAuOECig/viewform"
+           target="_blank" rel="noopener">
+          Open in new tab
+        </a>
       </div>
-    </section>
-  </main>
 
-  <footer class="site-footer">
-    <p>© <span id="year"></span> AI Research Corps (AIRC) · 501(c)(3)</p>
-  </footer>
+      <div class="mp-iframe-wrap">
+        <iframe
+          class="mp-iframe"
+          src="https://docs.google.com/forms/d/e/1FAIpQLSewMzKV9E5IXkiPUaWr7QbopqJVJpyLWF5qXVDGEyEAuOECig/viewform?embedded=true"
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        >
+        </iframe>
+      </div>
 
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
+      <div class="mp-note">
+        If the form area shows a blank/sad icon: try disabling adblock/shields for this page, or use “Open in new tab”.
+        (Some privacy settings block Google Forms inside embedded frames.)
+      </div>
+    </div>
+  </div>
 </body>
 </html>
