--- a/MentorProgram/Submission/SessionPlanning.html
+++ b/MentorProgram/Submission/SessionPlanning.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>AIRC Mentor Program | Session Planning </title>
+  <title>AIRC Mentor Program | Form 01 — Session Planning Sheet</title>
   <meta name="description" content="AIRC Mentor Program — Session Planning Sheet (native form). Copy as text or send via email." />
 
   <style>
@@ -173,7 +173,7 @@
         <img class="logo" src="/assets/img/AIRC_LOGO.png" alt="AIRC logo" />
         <div>
           <div class="kicker">AI Research Corp (AIRC) • Mentor Program</div>
-          <h1>Session Planning</h1>
+          <h1>Form 01 — Session Planning Sheet</h1>
           <p class="sub">To be completed before outreach. Use “Copy as Text” or “Send via Email”.</p>
         </div>
       </div>
@@ -477,7 +477,7 @@
     // === Configure without touching the form ===
     const CONFIG = {
       emailTo: "mohamad@airesearchcorp.org",
-      emailSubject: "AIRC Mentor Program — Session Planning"
+      emailSubject: "AIRC Mentor Program — Form 01 | Session Planning Sheet"
     };
 
     const $ = (id) => document.getElementById(id);
