--- a/MentorProgram/Submission/index.html
+++ b/MentorProgram/Submission/index.html
@@ -36,7 +36,7 @@
           <h4>Available Forms</h4>
           <ul style="margin-top:12px; line-height:1.8;">
             <li><a class="text-link" href="/MentorProgram/Submission/SessionPlanning.html">Session Planning</a></li>
-            <li><a class="text-link" href="/MentorProgram/Submission/forms/form-02.html">Form 02</a></li>
+            <li><a class="text-link" href="/MentorProgram/Submission/forms/PlanningTemplate.html">PlanningTemplate</a></li>
             <li><a class="text-link" href="/MentorProgram/Submission/forms/form-03.html">Form 03</a></li>
             <li><a class="text-link" href="/MentorProgram/Submission/forms/form-04.html">Form 04</a></li>
             <li><a class="text-link" href="/MentorProgram/Submission/forms/form-05.html">Form 05</a></li>
