--- a/MentorProgram/Submission/index.html
+++ b/MentorProgram/Submission/index.html
@@ -37,7 +37,7 @@
           <ul style="margin-top:12px; line-height:1.8;">
             <li><a class="text-link" href="/MentorProgram/Submission/SessionPlanning.html">Session Planning</a></li>
             <li><a class="text-link" href="/MentorProgram/Submission/PlanningTemplate.html">PlanningTemplate</a></li>
-            <li><a class="text-link" href="/MentorProgram/Submission/forms/form-03.html">Form 03</a></li>
+            <li><a class="text-link" href="/MentorProgram/Submission/OutreachEmail.html">Outreach Email</a></li>
             <li><a class="text-link" href="/MentorProgram/Submission/forms/form-04.html">Form 04</a></li>
             <li><a class="text-link" href="/MentorProgram/Submission/forms/form-05.html">Form 05</a></li>
             <li><a class="text-link" href="/MentorProgram/Submission/forms/form-06.html">Form 06</a></li>
