--- a/MentorProgram/Submission/index.html
+++ b/MentorProgram/Submission/index.html
@@ -36,10 +36,10 @@
           <h4>Available Forms</h4>
           <ul style="margin-top:12px; line-height:1.8;">
             <li><a class="text-link" href="/MentorProgram/Submission/SessionPlanning.html">Session Planning</a></li>
-            <li><a class="text-link" href="/MentorProgram/Submission/PlanningTemplate.html">PlanningTemplate</a></li>
+            <li><a class="text-link" href="/MentorProgram/Submission/PlanningTemplate.html">Planning Template</a></li>
             <li><a class="text-link" href="/MentorProgram/Submission/OutreachEmail.html">Outreach Email</a></li>
-            <li><a class="text-link" href="/MentorProgram/Submission/SessionRun.html">SessionRun</a></li>
-            <li><a class="text-link" href="/MentorProgram/Submission/forms/form-05.html">Form 05</a></li>
+            <li><a class="text-link" href="/MentorProgram/Submission/SessionRun.html">Session Run</a></li>
+            <li><a class="text-link" href="/MentorProgram/Submission/HostGuide.html">Host Guide</a></li>
             <li><a class="text-link" href="/MentorProgram/Submission/forms/form-06.html">Form 06</a></li>
           </ul>
 
