--- a/MentorProgram/Submission/index.html
+++ b/MentorProgram/Submission/index.html
@@ -40,7 +40,7 @@
             <li><a class="text-link" href="/MentorProgram/Submission/OutreachEmail.html">Outreach Email</a></li>
             <li><a class="text-link" href="/MentorProgram/Submission/SessionRun.html">Session Run</a></li>
             <li><a class="text-link" href="/MentorProgram/Submission/HostGuide.html">Host Guide</a></li>
-            <li><a class="text-link" href="/MentorProgram/Submission/forms/form-06.html">Form 06</a></li>
+            <li><a class="text-link" href="/MentorProgram/Submission/SessionSubmission.html">Session Submission</a></li>
           </ul>
 
           <p class="card-meta" style="margin-top:14px;">
