--- a/MentorProgram/Submission/index.html
+++ b/MentorProgram/Submission/index.html
@@ -41,6 +41,10 @@
             <li><a class="text-link" href="/MentorProgram/Submission/SessionRun.html">Session Run</a></li>
             <li><a class="text-link" href="/MentorProgram/Submission/HostGuide.html">Host Guide</a></li>
             <li><a class="text-link" href="/MentorProgram/Submission/SessionSubmission.html">Session Submission</a></li>
+            <li><a class="text-link" href="/MentorProgram/Submission/Publication.html">Publication</a></li>
+            <li><a class="text-link" href="/MentorProgram/Submission/SessionSubmission.html">Session Submission</a></li>
+            <li><a class="text-link" href="/MentorProgram/Submission/SessionSubmission.html">Session Submission</a></li>
+            <li><a class="text-link" href="/MentorProgram/Submission/SessionSubmission.html">Session Submission</a></li>
           </ul>
 
           <p class="card-meta" style="margin-top:14px;">
