--- a/MentorProgram/Submission/index.html
+++ b/MentorProgram/Submission/index.html
@@ -42,7 +42,7 @@
             <li><a class="text-link" href="/MentorProgram/Submission/HostGuide.html">Host Guide</a></li>
             <li><a class="text-link" href="/MentorProgram/Submission/SessionSubmission.html">Session Submission</a></li>
             <li><a class="text-link" href="/MentorProgram/Submission/Publication.html">Publication</a></li>
-            <li><a class="text-link" href="/MentorProgram/Submission/SessionSubmission.html">Session Submission</a></li>
+            <li><a class="text-link" href="/MentorProgram/Submission/VolunteerActivity.html">Volunteer Activity</a></li>
             <li><a class="text-link" href="/MentorProgram/Submission/SessionSubmission.html">Session Submission</a></li>
             <li><a class="text-link" href="/MentorProgram/Submission/SessionSubmission.html">Session Submission</a></li>
           </ul>
