--- a/MentorProgram/Submission/index.html
+++ b/MentorProgram/Submission/index.html
@@ -39,12 +39,12 @@
             <li><a class="text-link" href="/MentorProgram/Submission/PlanningTemplate.html">Planning Template</a></li>
             <li><a class="text-link" href="/MentorProgram/Submission/OutreachEmail.html">Outreach Email</a></li>
             <li><a class="text-link" href="/MentorProgram/Submission/SessionRun.html">Session Run</a></li>
+            <li><a class="text-link" href="/MentorProgram/Submission/PostSession.html">Post Session</a></li>
             <li><a class="text-link" href="/MentorProgram/Submission/HostGuide.html">Host Guide</a></li>
             <li><a class="text-link" href="/MentorProgram/Submission/SessionSubmission.html">Session Submission</a></li>
             <li><a class="text-link" href="/MentorProgram/Submission/Publication.html">Publication</a></li>
             <li><a class="text-link" href="/MentorProgram/Submission/VolunteerActivity.html">Volunteer Activity</a></li>
-            <li><a class="text-link" href="/MentorProgram/Submission/SessionSubmission.html">Session Submission</a></li>
-            <li><a class="text-link" href="/MentorProgram/Submission/SessionSubmission.html">Session Submission</a></li>
+            <li><a class="text-link" href="/MentorProgram/Submission/GuestManagement.html">Guest Management</a></li>
           </ul>
 
           <p class="card-meta" style="margin-top:14px;">
