--- a/MentorProgram/Submission/index.html
+++ b/MentorProgram/Submission/index.html
@@ -27,8 +27,7 @@
     <section class="section">
       <h3 class="section-title">Submission Tools</h3>
       <p class="section-intro">
-        Use these forms if you prefer web submissions instead of Word/PDF templates.
-        Each link opens a short wrapper page with instructions and an embedded Google Form.
+        Use these forms if you prefer quick forms / templates.
       </p>
 
       <div class="single-card">
