--- a/MentorProgram/Submission/index.html
+++ b/MentorProgram/Submission/index.html
@@ -44,6 +44,7 @@
             <li><a class="text-link" href="/MentorProgram/Submission/Publication.html">Publication</a></li>
             <li><a class="text-link" href="/MentorProgram/Submission/VolunteerActivity.html">Volunteer Activity</a></li>
             <li><a class="text-link" href="/MentorProgram/Submission/GuestManagement.html">Guest Management</a></li>
+            <li><a class="text-link" href="/MentorProgram/Submission/QuestionBank.html">Question Bank</a></li>
           </ul>
 
           <p class="card-meta" style="margin-top:14px;">
